=== 1.9.18 ===
2007-09-11 Fabio Morbec <fabio@async.com.br>
	* NEWS:
	* debian/changelog:
	* doc/howto.tex:
	* kiwi/__version__.py
	* kiwi.spec
	Release 1.9.18

=== 1.9.17 ===
2007-07-31 Fabio Morbec  <fabio@async.com.br>

	* NEWS:
	* debian/changelog:
	* doc/howto.tex:
	* kiwi/__version__.py:
	Release 1.9.17

2007-08-28  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/gazpacholoader.py:
	* gazpacho-plugin/kiwiwidgets.xml: Add gazpacho support for scale 
	widgets too.

	* kiwi/ui/widgets/scale.py: Add HScale/VScale, based on patch by
	Mauricio B. C. Vieira.

2007-08-26  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py (Column, ObjectList): Remove the cache
	property.
	(ObjectList): Refactor column and renderer handling to the
	Column

2007-08-22  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/listdialog.py (ListContainer._on_list__row_activated): 
	If we're editable open fire up edit signal when double clicking

2007-08-02  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py: Add basic DND support

2007-07-25  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/entry.py (KiwiEntry.prefill): Handle duplicate entries
	by adding (n) to the end of the name

2007-07-25  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py (Column.as_string): Call format_func before
	checking the format and the datatype, it should override everything.

2007-07-24  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/dialogs.py (selectfolder): New function based
	around gtk.FILE_CHOOSER_ACTION_SELECT_FOLDER. Based on patch
	by Paul Eipper (#3490)

	* kiwi/ui/objectlist.py (Column): Add ellipsize and font-desc 
	properties. Handle list without selection. Add a font-desc
	parameter to ListLabel/SummaryLabel

2007-07-19 Fabio Morbec  <fabio@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/combo.py (ProxyComboBoxEntry.prefill):
	Changed clear_entry param to True

=== 1.9.16 ===
2007-07-16  Johan Dahlin  <jdahlin@async.com.br>