@@ -1,3 +1,9 @@
+2007-09-14  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/widgets/combo.py (_EasyComboBoxHelper.get_selected): Return 
+	None instead of raising AssertionError when nothing has been 
+	inserted yet.
+
 === 1.9.18 ===
 2007-09-11 Fabio Morbec <fabio@async.com.br>
 	* NEWS:
